Completed Calendar Component: spacing fixed, sliding in/out functional, minNight stay pop up functional, color matching done, focus states for buttons fixed

--- a/public/style.css
+++ b/public/style.css
@@ -42,9 +42,12 @@
 }
 
 .left_button,
+.left_button.active.focus,
+.left_button.active:focus,
+.left_button.focus,
+.left_button.focus:active,  
 .left_button:active, 
-.left_button:focus, 
-.left_button:focus:active  {
+.left_button:focus {
     position: absolute;
     top: 12px;
     left: 0px;
@@ -56,6 +59,9 @@
     padding: 1% 1.5% 2% 1.5%; 
     box-shadow: none;
     -webkit-box-shadow: none;
+    outline: thin solid;
+    outline-width: 0px;
+    outline-offset: -2px;
 }
 
 .left_button:hover {
@@ -63,9 +69,12 @@
 }
 
 .right_button,
-.right_button:active, 
-.right_button:focus, 
-.right_button:focus:active {
+.right_button.active.focus,
+.right_button.active:focus,
+.right_button.focus,
+.right_button.focus:active,  
+.right_button:active,
+.right_button:focus {
     position: absolute;
     top: 12px;
     right: 0px;
@@ -75,6 +84,9 @@
     border-radius: 3px;
     margin: auto;
     padding: 1% 1.5% 2% 1.5%;
+    outline: thin solid;
+    outline-width: 0px;
+    outline-offset: -2px;
 }
 
 .right_button:hover {
@@ -89,18 +101,24 @@
     color: rgb(220, 220, 220);
 }
 
-.calendar_container {
-    display: flex;
-}
-
 
 
 
 /* MONTH COMPONENT */
+.calendar_container {
+}
+
+.calendar_fixed {
+    margin: 0px 0px 0px -307px;
+    overflow: hidden;
+    display: flex;
+
+}
 
 .month {
     padding: 0px 13px;
     text-align: center;
+    width: 281px;
 }
 
 .month_title {
@@ -165,12 +183,12 @@
     height: 38.143px;
     margin: 1px;
     border-radius: 4px; 
-    background: rgb(230, 249, 249);
-    color: rgb(35, 117, 90);
+    background: #ECF6F6;
+    color: #018489;
 }
 
 .date_available:hover {
-    background: rgba(121, 189, 189, 0.61);
+    background: rgba(161, 223, 223, 0.61);
     
 }
 
@@ -182,7 +200,7 @@
     border-radius: 4px; 
     padding: 0px;
     margin: 1px;
-    background: rgb(0, 103, 76);
+    background: #018489;
     color: rgb(255, 255, 255);
 }
 
@@ -212,3 +230,10 @@
     z-index: 2;
 
 }
+
+
+
+
+
+/* ANIMATIONS */
+
